sidecars/carta/k8s/slicer-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: carta-slicer
  namespace: skaha-workload
spec:
  replacePathRegex:
    regex: ^/session/carta/[^/]+(/|$)(.*)
    replacement: /$2
